k8s/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-gateways
  labels:
    istio.io/rev: 1-25-0
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio.io/rev: 1-25-0
---
