k8s/02-httpbin-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: httpbin
  namespace: httpbin
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-gateways
  to:
    - group: ''
      kind: Secret
      name: httpbin-credential
