k8s/03-my-gateway-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-gateways
spec:
  gatewayClassName: istio
  listeners:
    - name: https-httpbin
      hostname: httpbin.example.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        # should work thanks to referencegrant/httpbin, but fails when mTLS is enabled
        certificateRefs:
          - group: ''
            kind: Secret
            name: httpbin-credential
            namespace: httpbin
            # namespace: istio-gateways
        # options:
        #   gateway.istio.io/tls-terminate-mode: MUTUAL
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - httpbin
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
